# Homework31_Django_Validators_Tests

./: README.md  manage.py  pyproject.toml  pytest.ini  utils.py
Homework31_Django_Validators_Tests/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py
authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
fixtures/: ad.json  location.json  user.json
locations/: admin.py  models.py  serializers.py  views.py
locations/migrations/: 0001_initial.py
selections/: admin.py  models.py  permissions.py  serializers.py  views.py
selections/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_list_test.py  ads_retrieve_test.py
tests/selections/: selections_create_test.py
